your commit message here

--- a/Economic-History.html
+++ b/Economic-History.html
@@ -86,6 +86,7 @@
             margin-bottom: 8px;
             position: relative;
             padding-left: 25px;
+            font-size: 22px;
         }
 
         .terminal-list li::before {
@@ -396,9 +397,10 @@
                 <li><span class="warning">LOTTA HOME$ MORTGAGED FOLKS LOSE EVERYTHING…</span></li>
             </ul>
 
-            <div class="terminal-command">THE REPUBLICANISM/RELIGION GOVERNMENT FIX…</div>
+            
 
             <ul class="terminal-list">
+                <li>THE REPUBLICANISM/RELIGION GOVERNMENT FIX…</li>
                 <li>The PROP-UP…</li>
                 <li>GIVE $ To THE BANKS B A N K $</li>
                 <li>DRAFT….read to discuss…m 1 I</li>
