--- a/join-us.html
+++ b/join-us.html
@@ -200,6 +200,7 @@
             font-size: 2.8rem;
             margin-bottom: 20px;
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+            text-transform: uppercase;
         }
 
         .hero p {
@@ -586,7 +587,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="main-content">
-            <h1>This is an AD free, social media Free ZONE</h1>
+            <h1>This is an AD free, <br>social media Free ZONE</h1>
             <p>Join our movement for independent journalism</p>
             <a href="#memberships" class="btn"><i class="fas fa-users"></i> Become a Member</a>
         </div>
