--- a/Advertising.html
+++ b/Advertising.html
@@ -1330,6 +1330,9 @@
     <div class="container page-content">
         <div class="advertising-header animated">
             <h1>Advertising Opportunities</h1>
+            <div class="header-banner" style="display: flex; justify-content: center; align-items: center;">
+                <img src="images/AJ-1x1-image-3.webp" alt="">
+            </div>
             <p>Get your brand in front of our engaged audience of conscious consumers. Partner with us to reach readers who value independent journalism and ethical business practices.</p>
         </div>
 
