--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                 <a href="Editorial-opinion.html">Editorial/Opinion</a>
                 <a href="reason-to-join.html">REASONS TO JOIN</a>
                 <a href="join-us.html">Join uscu</a>
-                <a href="index.html">Advertise</a>
+                <a href="Advertising.html">Advertise</a>
                 <a href="about-us.html">About Us</a>
             </nav>
         </div>
