--- a/ongoing-investigation.html
+++ b/ongoing-investigation.html
@@ -936,7 +936,7 @@
                 <a href="Editorial-opinion.html">Editorial/Opinion</a>
                 <a href="reason-to-join.html">REASONS TO JOIN</a>
                 <a href="join-us.html">Join uscu</a>
-                <a href="index.html">Advertise</a>
+                <a href="Advertising.html">Advertise</a>
                 <a href="about-us.html">About Us</a>
             </nav>
         </div>
@@ -944,7 +944,7 @@
     <sectionc class="ongoing" style="padding-top: 110px;  color: #f7e058;">
         <div class="container">
             <div class="ongoing-text" style="padding: 250px 0;">
-                <h2 style="text-align: center; ">Price Of The Eggs</h2>
+                <h2 style="text-align: center; ">Ongoing Investigation</h2>
                 <p>Why did Israeli burn a child to death for praying at the wrong rock; “out of turn”… we’re not sure
                     what that
                     means??? WHY?
