--- a/price-of-the-eggs.html
+++ b/price-of-the-eggs.html
@@ -923,13 +923,13 @@ img.featured-image.aos-init.aos-animate {
                 <a href="Editorial-opinion.html">Editorial/Opinion</a>
                 <a href="reason-to-join.html">REASONS TO JOIN</a>
                 <a href="join-us.html">Join uscu</a>
-                <a href="index.html">Advertise</a>
+                <a href="Advertising.html">Advertise</a>
                 <a href="about-us.html">About Us</a>
             </nav>
         </div>
     </header>
     <section style="padding-top: 110px;         color: #f7e058;" class="images-banner">
-        <h2 style="text-align: center; ">Price Of The Eggs</h2>
+        <h2 style="text-align: center; ">Price of The Eggs</h2>
         <div class="image-container">
             <img style="    margin: 27px auto;" src="images/Capture.webp" class="img-fluid" alt="img">
         </div>
