--- a/gallary.html
+++ b/gallary.html
@@ -935,7 +935,7 @@ img.featured-image.aos-init.aos-animate {
                 <a href="Editorial-opinion.html">Editorial/Opinion</a>
                 <a href="reason-to-join.html">REASONS TO JOIN</a>
                 <a href="join-us.html">Join uscu</a>
-                <a href="index.html">Advertise</a>
+                <a href="Advertising.html">Advertise</a>
                 <a href="about-us.html">About Us</a>
             </nav>
         </div>
