--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <style>
+        .categories-section.aos-init.aos-animate.visible {
+    height: 95vh!important;
+}
         :root {
             --primary-color: #131E24;
             --secondary-color: #f7de58;
