--- a/Advertising.html
+++ b/Advertising.html
@@ -1388,14 +1388,14 @@
                     <h3>Standard Placement</h3>
                     <div class="size">1×1 Size</div>
                     <div class="price">$100 <span>every 6 months</span></div>
-                    <p class="frequency">Billed semi-annually</p>
-                    <ul class="benefits-list">
+                    <!-- <p class="frequency">Billed semi-annually</p> -->
+                    <!-- <ul class="benefits-list">
                         <li>Small background placement</li>
                         <li>Brand logo display</li>
                         <li>Link to your website</li>
                         <li>Basic analytics report</li>
                         <li>Monthly impressions report</li>
-                    </ul>
+                    </ul> -->
                     <a href="mailto:infoforuscu@uscu.info?subject=Standard Advertising Package" class="btn">Select Plan</a>
                 </div>
                 
@@ -1403,15 +1403,15 @@
                     <h3>Popular Choice</h3>
                     <div class="size">1×2 Size</div>
                     <div class="price">$200 <span>every 6 months</span></div>
-                    <p class="frequency">Billed semi-annually</p>
-                    <ul class="benefits-list">
+                    <!-- <p class="frequency">Billed semi-annually</p> -->
+                    <!-- <ul class="benefits-list">
                         <li>Medium background placement</li>
                         <li>Brand logo + tagline</li>
                         <li>Link to your website</li>
                         <li>Detailed analytics report</li>
                         <li>Featured in newsletter</li>
                         <li>Bi-weekly performance updates</li>
-                    </ul>
+                    </ul> -->
                     <a href="mailto:infoforuscu@uscu.info?subject=Popular Advertising Package" class="btn">Select Plan</a>
                 </div>
                 
@@ -1419,8 +1419,8 @@
                     <h3>Premium Placement</h3>
                     <div class="size">1×3 Size</div>
                     <div class="price">$300 <span>every 6 months</span></div>
-                    <p class="frequency">Billed semi-annually</p>
-                    <ul class="benefits-list">
+                    <!-- <p class="frequency">Billed semi-annually</p> -->
+                    <!-- <ul class="benefits-list">
                         <li>Large background placement</li>
                         <li>Brand logo + tagline + short description</li>
                         <li>Link to your website</li>
@@ -1428,7 +1428,7 @@
                         <li>Featured in newsletter and social media</li>
                         <li>Quarterly performance review</li>
                         <li>Dedicated account manager</li>
-                    </ul>
+                    </ul> -->
                     <a href="mailto:infoforuscu@uscu.info?subject=Premium Advertising Package" class="btn">Select Plan</a>
                 </div>
             </div>
