--- a/Economic-History.html
+++ b/Economic-History.html
@@ -413,12 +413,14 @@
 
     <footer class="site-footer" data-aos="fade-up">
         <div class="footer-container">
-            <!-- <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fas fa-rss"></i></a>
-            </div> -->
+            <nav class="main-nav" style="display: flex; justify-content: center; align-items: center; margin: 50px 10px;">
+                <a href="index.html">Home</a>
+                <a href="Editorial-opinion.html">Editorial/Opinion</a>
+                <a href="reason-to-join.html">REASONS TO JOIN</a>
+                <a href="join-us.html">Join uscu</a>
+                <a href="Advertising.html">Advertise</a>
+                <a href="about-us.html">About Us</a>
+            </nav>
             <p>Copyright 2025 thealternativejournalists.com All Rights Reserved.</p>
             <a href="#" class="back-to-top" id="back-to-top">
                 <i class="fas fa-arrow-up"></i>
