--- a/gallary.html
+++ b/gallary.html
@@ -1026,12 +1026,14 @@ img.featured-image.aos-init.aos-animate {
   <!-- Footer -->
   <footer class="site-footer text-center py-4" data-aos="fade-up">
     <div class="footer-container">
-      <div class="social-links mb-3">
-        <a href="#"><i class="fab fa-twitter fa-lg me-3"></i></a>
-        <a href="#"><i class="fab fa-youtube fa-lg me-3"></i></a>
-        <a href="#"><i class="fab fa-telegram fa-lg me-3"></i></a>
-        <a href="#"><i class="fas fa-rss fa-lg"></i></a>
-      </div>
+      <nav class="main-nav" style="display: flex; justify-content: center; align-items: center; margin: 50px 10px;">
+                <a href="index.html">Home</a>
+                <a href="Editorial-opinion.html">Editorial/Opinion</a>
+                <a href="reason-to-join.html">REASONS TO JOIN</a>
+                <a href="join-us.html">Join uscu</a>
+                <a href="Advertising.html">Advertise</a>
+                <a href="about-us.html">About Us</a>
+            </nav>
       <p class="mb-2">Copyright 2025 thealternativejournalists.com - All Rights Reserved.</p>
       <a href="#" class="back-to-top" id="back-to-top">
         <i class="fas fa-arrow-up"></i>
