--- a/reason-to-join.html
+++ b/reason-to-join.html
@@ -817,16 +817,15 @@
                         members receive extra entries.</p>
                 </div>
 
-                <div class="detail-card">
+                <!-- <div class="detail-card">
                     <h3><i class="fas fa-search"></i> Founding Spot Availability</h3>
                     <p>Inactive Founding Charter Memberships are published on Page 2. Charter members can upgrade on a
                         first-come, first-served basis.</p>
-                </div>
+                </div> -->
 
                 <div class="detail-card">
-                    <h3><i class="fas fa-ban"></i> No Ads Policy</h3>
-                    <p>Our platform has zero commercial advertising. We only allow ads that mock bad ads to encourage
-                        change in advertising practices.</p>
+                    <h3><i class="fas fa-ban"></i> Ads Policy</h3>
+                    <p><a href="Advertising.html" style="color: #ffff;">visit Advertise page </a></p>
                 </div>
 
                 <div class="detail-card">
@@ -860,11 +859,11 @@
                     <p>Ask for Mike - Available 365 days/year</p>
                 </div>
 
-                <div class="contact-method">
+                <!-- <div class="contact-method">
                     <i class="fas fa-info-circle contact-icon"></i>
                     <h3>More Information</h3>
                     <p>Visit Page 2 for Founding Membership availability and detailed FAQs.</p>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
@@ -872,12 +871,14 @@
     <!-- Footer -->
     <footer class="site-footer" data-aos="fade-up">
         <div class="footer-container">
-            <!-- <div class="social-links">
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-                <a href="#"><i class="fas fa-rss"></i></a>
-            </div> -->
+            <nav class="main-nav" style="display: flex; justify-content: center; align-items: center; margin: 50px 10px;">
+                <a href="index.html">Home</a>
+                <a href="Editorial-opinion.html">Editorial/Opinion</a>
+                <a href="reason-to-join.html">REASONS TO JOIN</a>
+                <a href="join-us.html">Join uscu</a>
+                <a href="Advertising.html">Advertise</a>
+                <a href="about-us.html">About Us</a>
+            </nav>
             <p>Copyright 2025 thealternativejournalists.com All Rights Reserved.</p>
             <a href="#" class="back-to-top" id="back-to-top">
                 <i class="fas fa-arrow-up"></i>
