--- a/reason-to-join.html
+++ b/reason-to-join.html
@@ -630,20 +630,21 @@
                 font-size: 1.1rem;
             }
         }
+
         .btn-join {
-    display: inline-block;
-    background: var(--secondary-color);
-    color: var(--primary-color);
-    padding: 15px 40px;
-    border-radius: 50px;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 1.1rem;
-    transition: all 0.3s;
-    border: 2px solid var(--secondary-color);
-    margin-top: 10px;
-    cursor: pointer;
-}
+            display: inline-block;
+            background: var(--secondary-color);
+            color: var(--primary-color);
+            padding: 15px 40px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1.1rem;
+            transition: all 0.3s;
+            border: 2px solid var(--secondary-color);
+            margin-top: 10px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -724,11 +725,13 @@
                 <p>We must solve this climate problem… Why? "Because we can & because there is no one else that will
                     do it!"</p>
                 <p>Politicians & Others & Certain Corporations</p>
-                <h2><span style="color:red;">THEY’RE USING YOU/</span><span style="color: #f7de58;">U</span><span style="color:#8533d6;">S</span>/We</h2>
+                <h2><span style="color:red;">THEY’RE USING YOU</span><span style="color: #f7de58;">U</span><span
+                        style="color:#8533d6;">S</span><span style="color: #f7de58;">W</span><span style="color:#8533d6;">E</span></h2>
                 <p>⭐⭐🌍⭐⭐ They’re using all of us… It’s time to take a stand so, what time is it? 🕧 🕛 Most prices
                     don’t have to be that high We are not here to run small business out of business or not here to run
                     anybody out of business we’re simply here to protect our own pockets.</p>
-                <h2><SPAN STYLE="color: RED;">ALSO, THEY’RE USING YOU</SPAN>/ <SPAN style="color: #f7de58;">U</SPAN><span  style="color:#8533d6;">S</span>/We</h2>
+                <h2><SPAN STYLE="color: RED;">ALSO, THEY’RE USING YOU</SPAN> <SPAN
+                        style="color: #f7de58;">U</SPAN><span style="color:#8533d6;">S</span> <span style="color: #f7de58;">W</span><span style="color:#8533d6;">E</span></h2>
                 <p>& By the way they’re also using almost everyone!! (It’s become a way of life) & in some cases even
                     themselves it’s about “Tricky talk” © & it’s aimed at “surface thinkers” © and all the other people
                     that are able to buy what they’re selling whatever it is. Mostly stuff with no real value.</p>
@@ -871,7 +874,8 @@
     <!-- Footer -->
     <footer class="site-footer" data-aos="fade-up">
         <div class="footer-container">
-            <nav class="main-nav" style="display: flex; justify-content: center; align-items: center; margin: 50px 10px;">
+            <nav class="main-nav"
+                style="display: flex; justify-content: center; align-items: center; margin: 50px 10px;">
                 <a href="index.html">Home</a>
                 <a href="Editorial-opinion.html">Editorial/Opinion</a>
                 <a href="reason-to-join.html">REASONS TO JOIN</a>
