--- a/Advertising.html
+++ b/Advertising.html
@@ -1386,12 +1386,12 @@
                 </div>
             </div>
 
-            <div class="testimonial">
+            <!-- <div class="testimonial">
                 <p>"Advertising with The Alternative Journalist has transformed our brand visibility. Their audience is
                     exactly the conscious consumers we want to reach, and the response rate has exceeded our
                     expectations."</p>
                 <p class="client">- Sarah Johnson, Marketing Director at GreenLife Organics</p>
-            </div>
+            </div> -->
         </div>
 
         <div class="section animated">
