--- a/index.html
+++ b/index.html
@@ -299,19 +299,20 @@
 
         .audio-control {
             width: 90px;
-            height: 90px;
-            margin: 0 auto 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
-            border-radius: 50%;
-            background-color: var(--ios-blue);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 30px;
-        }
+    height: 90px;
+    margin: 0 auto 20px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    /* filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2)); */
+    border-radius: 50%;
+    background-color: #ffffff;
+    display: flex
+;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 30px;
+}
 
         .audio-control i {
             margin-left: 5px;
@@ -1025,34 +1026,25 @@
         <div class="audio-section" id="audio-section" data-aos="fade-up-ios" data-aos-delay="200">
             <div class="audio-player">
                 <div class="audio-control" id="music-trigger">
-                    <i class="fas fa-play"></i>
+                    <!-- <i class="fas fa-play"></i> -->
                 </div>
-                <h3 class="audio-title">ROCK-A-BYE BABY</h3>
-                <p class="audio-instruction">Tap to play/pause</p>
+                <!-- <h3 class="audio-title">ROCK-A-BYE BABY</h3> -->
+                <!-- <p class="audio-instruction">Tap to play/pause</p> -->
+            </div>
+  <div class="audio-player">
+                <div class="audio-control" id="music-trigger">
+                    <!-- <i class="fas fa-play"></i> -->
+                </div>
+                <!-- <h3 class="audio-title">ROCK-A-BYE BABY</h3> -->
+                <!-- <p class="audio-instruction">Tap to play/pause</p> -->
             </div>
 
-            <div class="audio-player">
-                <p class="audio-instruction">Tap <i class="fas fa-play"
-                        style="font-size:1rem; color:var(--ios-blue)"></i> <span
-                        style="color:var(--accent-color)">Play</span> / <span style="color:#ff6b6b">Stop</span></p>
-                <div class="audio-control" id="music-trigger2">
-                    <i class="fas fa-play"></i>
+             <div class="audio-player">
+                <div class="audio-control" id="music-trigger">
+                    <!-- <i class="fas fa-play"></i> -->
                 </div>
-                <h3 class="audio-title">YA GOT TROUBLE</h3>
-                <div style="margin-top:20px;">
-                    <a href="https://www.justwatch.com/ca/movie/the-music-man" style="display:inline-block;">
-                        <img src="images/logog.png" alt="The Music Man" style="width:120px; border-radius:12px;">
-                    </a>
-                    <h3 style="color:var(--secondary-color); margin-top:10px;">THE MUSIC MAN</h3>
-                </div>
-            </div>
-
-            <div class="audio-player">
-                <div class="audio-control" id="music-trigger3">
-                    <i class="fas fa-play"></i>
-                </div>
-                <h3 class="audio-title">DOZER</h3>
-                <p class="audio-instruction">Tap to play/pause</p>
+                <!-- <h3 class="audio-title">ROCK-A-BYE BABY</h3> -->
+                <!-- <p class="audio-instruction">Tap to play/pause</p> -->
             </div>
         </div>
 
